Add JavaFX emulator with ServiceLoader-based driver auto-selection.
- Implement pux4j-test-support headless doubles: RecordingEInkDisplay,
  ProgrammaticTouchDriver, FramebufferAssertions (including golden-file
  PNG comparison).
- Implement pux4j-emulator: EmulatedEInkDisplay, EmulatedTouchDriver,
  EInkEmulatorWindow, plus EmulatedDisplayDriverFactory /
  EmulatedTouchDriverFactory registered via ServiceLoader.
- Add priority()/isAvailable() to DisplayDriverFactory/TouchDriverFactory
  so pux4j-validation auto-selects hardware drivers on a Pi and the
  emulator elsewhere; hardware factories check /proc/device-tree/model,
  the PNG factory opts out of auto-selection entirely.
- Add run-smoke-emulator.sh / run-validation-emulator.sh to
  pux4j-validation for running against the emulator with no hardware
  required.