@@ -3,27 +3,36 @@ package dev.pux4j.ui.test;
 
 import dev.pux4j.ui.core.TouchDriver;
 import dev.pux4j.ui.core.TouchPoint;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
-import java.util.ArrayDeque;
-import java.util.Collections;
 import java.util.List;
-import java.util.Queue;
+import java.util.concurrent.ConcurrentLinkedQueue;
 
 /**
- * Queue-based touch driver for tests. Callers enqueue touch events;
- * {@link #readTouches()} drains one batch per call.
- * Stub implementation — to be completed in Phase 3.
+ * Queue-based touch driver for tests. Thread-safe.
+ * Callers enqueue touch events; {@link #readTouches()} drains one batch per call.
  */
 public final class ProgrammaticTouchDriver implements TouchDriver {
 
-    private final Queue<List<TouchPoint>> queue = new ArrayDeque<>();
+    private static final Logger log = LoggerFactory.getLogger(ProgrammaticTouchDriver.class);
 
-    public void enqueue(List<TouchPoint> contacts) {
-        queue.add(List.copyOf(contacts));
+    private final ConcurrentLinkedQueue<List<TouchPoint>> queue = new ConcurrentLinkedQueue<>();
+
+    /**
+     * Enqueues a single touch contact as one read batch.
+     */
+    public void queueTouch(TouchPoint contact) {
+        log.trace("queueTouch id={} x={} y={} down={}", contact.id(), contact.x(), contact.y(), contact.down());
+        queue.add(List.of(contact));
     }
 
-    public void enqueue(TouchPoint... contacts) {
-        queue.add(List.of(contacts));
+    /**
+     * Enqueues a multi-contact event as one read batch.
+     */
+    public void queueTouches(List<TouchPoint> contacts) {
+        log.trace("queueTouches count={}", contacts.size());
+        queue.add(List.copyOf(contacts));
     }
 
     @Override public void initialize() {}
@@ -32,6 +41,9 @@ public final class ProgrammaticTouchDriver implements TouchDriver {
     @Override
     public List<TouchPoint> readTouches() {
         var batch = queue.poll();
-        return batch != null ? batch : Collections.emptyList();
+        if (batch != null) {
+            log.trace("readTouches returning {} contacts", batch.size());
+        }
+        return batch != null ? batch : List.of();
     }
 }
